--- a/src/App/templates/layout/default.phtml
+++ b/src/App/templates/layout/default.phtml
@@ -37,6 +37,11 @@
                         		Websites
                         	</a>
 						</li>
+                        <li class="nav-item">
+                        	<a href="/logs">
+                        		Logs
+                        	</a>
+						</li>
                     </ul>
                 </div>
             </div>
